@@ -1,3 +1,11 @@
+2013-05-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* tests/simulate/regression/bug-28135.c: GCC 4.5+ implies malloc()
+	and free() have no side-effects to global variables.  Place a
+	memory barrier before any evaluations of __flp or __brkval to
+	ensure the compiler actually reads them from the respective memory
+	locations.
+
 2013-05-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	Submitted by Frédéric Nadeau:
